# pychmrs

./: Cargo.toml  LICENSE  README.md  prek.toml  pyproject.toml  rustfmt.toml
.github/workflows/: CI.yml
src/: lib.rs
