[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "pychmrs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "Topic :: File Formats"
]
dynamic = ["version"]
description = "libchm (rust) wrapper"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/joshuashaffer/pychmrs"
